# contextual-task-cli

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
contextual_task_cli/: __init__.py  __main__.py  config.py  conversation.py  formatters.py  main.py  models.py  prompts.py  storage.py
